# sysunit

./: Cargo.toml  README.md  ROADMAP.md  TODO
doc/: book.toml
doc/src/: SUMMARY.md  about.md  guide.md  how_it_works.md  intro.md
doc/src/cookbook/: installing_from_tarballs.md  provisioning_docker.md
doc/src/guide/: captures.md  dependencies.md  file_dependencies.md  parameters.md  path_and_unitfiles.md  targets.md  units.md
src/: cli.rs  engine.rs  events.rs  main.rs  models.rs  parser.rs  unitfile.rs  util.rs
src/cli/: reporter.rs
src/cli/reporter/: common.rs  ctx.rs
src/cli/reporter/ctx/: ex_section.rs  load.rs  op.rs  root.rs
src/engine/: executor_pool.rs  loader.rs  resolver.rs  runner.rs  shell_executor.rs  shell_slug.template.sh  transport.rs  unit_execution.rs
src/engine/loader/: dir.rs  location.rs  unitfile.rs
src/engine/shell_executor/: adapter.rs  message_stream.rs  op_executor.rs  stdout_data.rs  subprocess.rs
src/models/: dep.rs  emit.rs  meta.rs  operation.rs  params.rs  stdout_data.rs  target.rs  unit.rs  val.rs  version.rs
src/parser/: arg_values.rs  captures.rs  common.rs  deps.rs  params.rs  stdout_data.rs  target.rs  unit_file.rs  value.rs  version.rs
