[package]
name = "sysunit"
version = "0.6.2"
edition = "2021"
description = "A minimal state management tool for POSIX systems"
license = "AGPL"
authors = ["Jack Forrest <hello@jackforrest.codes>"]
homepage = "https://jackforrest.codes/sysunit"

[dependencies]
async-std="1.12.0"
async-process="2.2.1"
async-trait="0.1.80"
async-stream = "0.3"
futures = "0.3.30"
anyhow = "1.0.42"
colored = "2.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha1 = "0.10.6"
rand = "0.8.5"
nom = "7.1.3"
nix = { version = "0.29.0", features = ["fs"] }
no_deadlocks = "1.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
itertools = "0.13.0"

[profile.release]
opt-level = "z"
panic = "abort"
lto = "fat"
strip = true
